add file type to image tag

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,7 +2,7 @@
   <div class="bg-white p-16 rounded shadow-2x1 w-2/3">
     <%= link_to posts_path do %>
       <div class="">
-        <%= image_tag "left-arrow", class: "inline-block h-4 w-4" %>
+        <%= image_tag "left-arrow.png", class: "inline-block h-4 w-4" %>
         <div class=" inline-block">Posts</div>
       </div>
     <% end %>
